--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "dependencies": {
     "@types/debug": "0.0.29",
-    "debug": "^2.3.3",
-    "env-paths": "^0.3.1"
+    "debug": "^2.3.3"
   },
   "ava": {
     "files": [
