Updated exported types, fixed naming, added tests.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Example",
-      "program": "${workspaceRoot}\\dist\\example.js",
+      "program": "${workspaceRoot}/dist/example.js",
       "cwd": "${workspaceRoot}",
-      "outDir": "${workspaceRoot}\\dist",
+      "outDir": "${workspaceRoot}/dist",
       "preLaunchTask": "build",
       "sourceMaps": true,
       "console": "externalTerminal",
