--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "gulp clean",
-    "rebuild": "gulp build",
+    "build": "gulp build",
     "watch": "gulp watch",
     "test": "gulp test",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/JimmyBoh/skedgy#readme",
   "devDependencies": {
-    "@types/node": "0.0.2",
-    "ava": "^0.17.0",
-    "coveralls": "^2.11.15",
-    "del": "^2.2.2",
+    "@types/node": "10.7.1",
+    "ava": "^0.25.0",
+    "coveralls": "^3.0.2",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-shell": "^0.5.2",
-    "nyc": "^10.0.0",
-    "typescript": "^2.1.4",
-    "yargs": "^6.5.0"
+    "gulp-shell": "^0.6.5",
+    "nyc": "^12.0.2",
+    "typescript": "^3.0.1",
+    "yargs": "^12.0.1"
   },
   "dependencies": {
-    "@types/debug": "0.0.29",
-    "debug": "^2.3.3"
+    "@types/debug": "0.0.30",
+    "debug": "^3.1.0"
   },
   "ava": {
     "files": [
