--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "clean": "gulp clean",
-    "build": "gulp build",
-    "watch": "gulp watch",
-    "test": "gulp test",
+    "clean": "rimraf ./dist/** ./coverage",
+    "build": "tsc",
+    "watch": "concurrently npm:watch:*",
+    "watch:build": "tsc --watch",
+    "watch:test": "ava --watch",
+    "test": "tsc && nyc --color -a ava -v",
+    "debug": "tsc && node ./dist/debug",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "preversion": "npm test",
     "version": "git add -A",
@@ -25,19 +28,17 @@
   },
   "homepage": "https://github.com/JimmyBoh/skedgy#readme",
   "devDependencies": {
-    "@types/node": "10.7.1",
+    "@types/debug": "0.0.30",
+    "@types/node": "10.9.4",
     "ava": "^0.25.0",
+    "concurrently": "^4.0.1",
     "coveralls": "^3.0.2",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-shell": "^0.6.5",
-    "nyc": "^12.0.2",
-    "typescript": "^3.0.1",
-    "yargs": "^12.0.1"
+    "nyc": "^13.0.1",
+    "rimraf": "^2.6.2",
+    "typescript": "^3.0.3"
   },
   "dependencies": {
-    "@types/debug": "0.0.30",
-    "debug": "^3.1.0"
+    "debug": "^4.0.1"
   },
   "ava": {
     "files": [
@@ -53,7 +54,8 @@
     ],
     "exclude": [
       "dist/**/*.spec.js",
-      "dist/example.js"
+      "dist/example.js",
+      "dist/lib/models.js"
     ]
   }
 }
