--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 {
-  // Use IntelliSense to learn about possible Node.js debug attributes.
+  // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
@@ -10,21 +10,15 @@
       "name": "Launch Example",
       "program": "${workspaceRoot}/dist/example.js",
       "cwd": "${workspaceRoot}",
-      "outDir": "${workspaceRoot}/dist",
-      "preLaunchTask": "build",
+      "preLaunchTask": "npm: build",
+      "outFiles": [
+        "${workspaceRoot}/dist/**/*.js"
+      ],
       "sourceMaps": true,
-      "console": "externalTerminal",
+      "console": "integratedTerminal",
       "env": {
         "DEBUG": "skedgy:*"
       }
-    },
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach to Process",
-      "port": 5858,
-      "outFiles": [],
-      "sourceMaps": true
     }
   ]
 }
